pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sandbox
spec:
  volumes:
    - name: docker-secret
      secret:
        secretName: secret-dockercfg
    - name: secrets-store-inline
      csi:
        driver: secrets-store.csi.k8s.io
        readOnly: true
        volumeAttributes:
          secretProviderClass: "azure-vishnukv001"
        nodePublishSecretRef:
          name: secrets-store-creds
  containers:
    - name: sandbox
      image: nicolaka/netshoot
      command:
        - /bin/bash
        - -c
        - sleep infinity
      volumeMounts:
        - name: docker-secret
          readOnly: true
          mountPath: "/opt/docker-secret"
        - name: secrets-store-inline
          readOnly: true
          mountPath: "/mnt/secrets-store"
