sample-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sample-deployment
  name: sample-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sample-deployment
  strategy: {}
  template:
    metadata:
      labels:
        app: sample-deployment
    spec:
      tolerations:
        - key: "env"
          operator: "Exists"
          effect: "NoSchedule"
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: kubernetes.io/os
        whenUnsatisfiable: DoNotSchedule
        labelSelector:
          matchLabels:
            foo: bar
      containers:
      - name: pause
        image: registry.k8s.io/pause:3.1
        resources: {}
status: {}
